# bls-signatures

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile.am  Makefile.bls.include  apple.rust.deps.sh  apple.rust.sh  apple.rust.single.sh  configure.ac  emsdk_build.sh
.github/workflows/: build-binds.yml  build-test.yaml
bls-dash-sys/: Cargo.toml  build.rs
bls-dash-sys/c_binding/: blschia.cpp  utils.hpp
bls-dash-sys/src/: bindings.rs  lib.rs
bls-dash-sys/tests/: basic_sign.rs
go-bindings/: Makefile  README.md  blschia.cpp  elements.cpp  elements.go  go.mod  privatekey.cpp  privatekey.go  privatekey.h  schemes.cpp  schemes.go  threshold.cpp  threshold.go  threshold.h  threshold_test.go  util.go  utils.cpp  utils.hpp
js-bindings/: CMakeLists.txt  package-lock.json  package.json
python-bindings/: CMakeLists.txt  pythonbindings.cpp
python-impl/: op_swu_g2.py
rust-bindings/: Cargo.toml  build.rs  wrapper.h
rust-bindings/bls-dash-sys/: Cargo.toml  bindings.rs  build.rs
rust-bindings/bls-dash-sys/c-bindings/: bip32extendedkeys.cpp  bip32extendedkeys.h  elements.cpp  elements.h  privatekey.cpp  privatekey.h  schemes.cpp  schemes.h
rust-bindings/bls-dash-sys/c-bindings/bip32/: chaincode.cpp  chaincode.h  extendedprivatekey.cpp  extendedprivatekey.h  extendedpublickey.cpp  extendedpublickey.h
rust-bindings/bls-dash-sys/src/: lib.rs
rust-bindings/bls-dash-sys/tests/: sign_and_verify.rs
rust-bindings/bls-signatures/: Cargo.toml
rust-bindings/bls-signatures-autocxx/src/: lib.rs
rust-bindings/bls-signatures/src/: bip32_keys.rs  elements.rs  lib.rs  private_key.rs  schemes.rs  utils.rs
rust-bindings/bls-signatures/src/bip32/: chain_code.rs  private_key.rs  public_key.rs
rust-bindings/bls-signatures/src/legacy/: bip32_keys.rs  elements.rs  mod.rs
rust-bindings/bls-signatures/src/legacy/bip32/: private_key.rs
rust-bindings/example/: Cargo.toml
rust-bindings/example/src/: lib.rs  main.rs
rust-bindings/src/: bindings.rs  elements.rs  lib.rs  private_key.rs
rust-bindings_autocxx/: Cargo.toml  build.rs
rust-bindings_autocxx/src/: bindings.rs  elements.rs
rust-bindings_bindgen/: CMakeLists.txt  Cargo.toml  build.rs
rust-bindings_bindgen/c_binding/: privatekey.go  threshold.cpp
rust-bindings_bindgen/src/: lib.rs
src/: CMakeLists.txt  bls.cpp  bls.hpp  elements.cpp  elements.hpp  privatekey.cpp  privatekey.hpp  publickey.hpp  schemes.cpp  signature.hpp  test.cpp  threshold.cpp
